# Nanuak

./: .aider.model.settings.yml  .aider.startup_commands.txt  .gitignore  Cargo.toml  Get-GeminiAPIKey.ps1  Get-OllamaEnvVar.ps1  New table creation script  README.md  Start-Aider.ps1  Start-AiderOllamaQwen.ps1  Updated `caption_fulfillment.py  Updated `embedding_listener.py  Updated `track_requests_server.py  pyproject.toml
Migration Script (`2024-12-24-043900_migrate_image_stuff_to_public_schema/: up.sql`)
image-embedding-experiments/: Install-Torch.ps1  Run-EmbeddingPythonServer.ps1  Run-TrackRequestsServer.ps1  Start-CaptionFulfillment.ps1  Start-EmbeddingFulfillment.ps1  Start-Frontend.ps1  Start-Jupyter.ps1  Validate-Torch.ps1  caption_fulfillment.py  embedding_listener.py  frontend_server.py  hello.py  image_text_query.ipynb  image_to_caption.ipynb  pyproject.toml  track_requests_server.py
image-embedding-experiments/images/: photo-1734192209674-e38b0eb4ff1c.avif  photo-1734378377292-212b58560ff8.avif  premium_photo-1670161434750-d2798af413d4.avif
image-embedding-experiments/templates/: index.html
nanuak-1password/: Cargo.toml
nanuak-1password/src/: lib.rs  main.rs  op_item_get.rs  op_item_list.rs  op_read.rs  pick_secret.rs  types.rs
nanuak-ai-router/: Cargo.toml
nanuak-ai-router/src/: answer.rs  attributes.rs  embedding.rs  embedding_model.rs  embedding_provider.rs  embedding_space.rs  embedding_strategy.rs  generative_text_model.rs  generative_text_provider.rs  lib.rs  question.rs
nanuak-ai-router/src/models/: bge_m3_embedding_model.rs  gemma2_2b_generative_text_model.rs  mod.rs
nanuak-ai-router/src/providers/: mod.rs  ollama_embedding_provider.rs  ollama_generative_text_provider.rs
nanuak-ai-router/tests/: animals.rs  embedding_tests.rs
nanuak-cargo-home/: Cargo.toml
nanuak-cargo-home/src/: main.rs
nanuak-config/: Cargo.toml
nanuak-config/src/: config.rs  config_entry.rs  db_url.rs  default_secret_provider.rs  dirs.rs  env_secret_provider.rs  lib.rs  main.rs  my_1password_secret_provider.rs  secret_provider.rs  youtube_api_key.rs
nanuak-config/tests/: tests.rs
nanuak-downloads/: Cargo.toml
nanuak-embedding/: Cargo.toml
nanuak-embedding/src/: embedding_model.rs  embedding_provider.rs  embedding_request.rs  lib.rs  modality.rs  model_attributes.rs  well_known_providers.rs
nanuak-embedding/src/models/: mod.rs
nanuak-embedding/tests/: animals.rs  embedding_tests.rs
nanuak-files-index-fulfill/: Get-DatabaseUrl.ps1  Get-HFToken.ps1  Invoke-Search.ps1  Invoke.ps1  README.md  hello.py  nanuak-files-index-fulfill.py  pyproject.toml  search.py
nanuak-files-index-request/: Cargo.toml  Invoke-Coco.ps1  Invoke-Example.ps1  Invoke-Memes-Clip.ps1  Invoke-Memes-Nomic.ps1  OLD-Invoke-Example.ps1  prompt.txt
nanuak-files-index-request/src/: args.rs  insert_request_if_needed.rs  main.rs  process_file.rs  request_kind.rs
nanuak-files-search/: Get-HFToken.ps1  Start-SearchServer.ps1  pyproject.toml  search_app.py
nanuak-files-ui/: Cargo.toml  Start-UIServer.ps1
nanuak-files-ui/src/: db.rs  main.rs  routes.rs
nanuak-files-ui/templates/: index.html
nanuak-git/: Cargo.toml  Invoke-Crawl.ps1
nanuak-git/src/: crawl_message.rs  crawl_repos.rs  db.rs  fetch_github_repo_details.rs  gather_repo_info.rs  get_database_url.rs  get_github_details.rs  get_remotes.rs  get_repo_list_from_db.rs  main.rs  pick_remote.rs  pick_repo.rs  remotes.rs  repo_manifest.rs  upsert_cloned_repos.rs
nanuak-git/src/actions/: crawl_repos_action.rs  mod.rs  summarize_repos_action.rs
nanuak-memes/: Cargo.toml
nanuak-memes/src/: main.rs
nanuak-picking/: Cargo.toml
nanuak-picking/src/: picker.rs
nanuak-picking/tests/: animals.rs
nanuak-prompting/: Cargo.toml  Get-Prompt.ps1  Invoke.ps1  Pick-Files.ps1  files.txt
nanuak-prompting/src/: fzf.rs  main.rs
nanuak-qwen/: Cargo.toml  Invoke-Hello.ps1  Start-Server.ps1  Try-Image.ps1  Try-Meme.ps1  Try-Needle.ps1  Try-Server.ps1  hello.py  pyproject.toml  server.py
nanuak-reflection/: Cargo.toml
nanuak-schema/: Cargo.toml  Get-DatabaseUrl.ps1  Invoke-Migration.ps1  New-Diesel.ps1  New-Migration.ps1  README.md  Redo-Migration.ps1  Restore-Backup.ps1  Save-Backup.ps1  Undo-Migration.ps1  diesel.toml
nanuak-schema/migrations/2024-12-08-162117_create_youtube_schema/: down.sql  up.sql
nanuak-schema/migrations/2024-12-09-033407_create_youtube_video_data/: down.sql  up.sql
nanuak-schema/migrations/2024-12-09-045657_add_video_categories_table/: down.sql  up.sql
nanuak-schema/migrations/2024-12-10-040312_create_missing_videos_table/: down.sql  up.sql
nanuak-schema/migrations/2024-12-11-055012_add_videos_text_index/: down.sql  up.sql
nanuak-schema/src/: files_models.rs  files_schema.rs  git_models.rs  git_schema.rs  lib.rs  youtube_schema.rs
nanuak-ui/: README.md  Start-App.ps1  package.json  pnpm-lock.yaml
nanuak-ui/src-tauri/: Cargo.toml  tauri.conf.json
nanuak-ui/src-tauri/capabilities/: default.json
nanuak-vtt/: Cargo.toml  Invoke.ps1
nanuak-vtt/src/: main.rs
nanuak-whisper/: Get-HuggingFaceToken.ps1  README.md  Run.ps1  hello.py  pyproject.toml  target_file.txt
nanuak-youtube-embeddings/: Cargo.toml  Invoke-PopulateVideoEmbeddings.ps1  Invoke-SearchVideoEmbeddings.ps1
nanuak-youtube-embeddings/examples/: duration_embedding.rs  list_videos.rs  ollama.rs
nanuak-youtube-embeddings/src/: lib.rs
nanuak-youtube-history-search/: Cargo.toml  build.ps1
nanuak-youtube-history-search/src/: app.rs  db.rs  durations.rs  main.rs  structured_content.txt  ui.rs  write_files.ps1
nanuak-youtube-populate-details/: Cargo.toml  Get-YouTubeApiKey.ps1  Get-YouTubeLanguages.ps1  Get-YouTubeVideoCategories.ps1  Invoke-PopulateCategories.ps1  Invoke-PopulateVideos.ps1
nanuak-youtube-populate-details/examples/: single_video_details.rs
nanuak-youtube-populate-details/src/: main.rs
nanuak-youtube-takeout-ingest/: Cargo.toml  Run.ps1
nanuak-youtube-takeout-ingest/examples/: print_table_name.rs
nanuak-youtube-takeout-ingest/src/: entry.rs  main.rs  search_entry.rs  view_post_entry.rs  watch_entry.rs
(+31 files in other folders)
