[workspace]
resolver = "2"
members = [
    "nanuak-schema",
    "nanuak-youtube-populate-details",
    "nanuak-youtube-takeout-ingest",
    "nanuak-youtube-populate-details",
]

[workspace.dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.23", features = ["derive"] }
color-eyre = "0.6.3"
diesel = { version = "2.0", features = ["postgres", "chrono", "r2d2"] }
eyre = "0.6.12"
nanuak-schema = { path = "nanuak-schema" }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = {version="0.3.19", features=["env-filter"]}
url = "2.5.4"
r2d2 = "0.8.10"
reqwest = { version = "0.12.9", features = ["json"] }
itertools = "0.13.0"
futures = "0.3.31"
