[workspace]
resolver = "2"
members = [
    "nanuak-schema",
    "nanuak-youtube-populate-details",
    "nanuak-youtube-takeout-ingest",
    "nanuak-youtube-populate-details",
    "nanuak-youtube-embeddings",
    "nanuak-ui/src-tauri",
    "nanuak-files-index-request", "nanuak-prompting",
]

[workspace.dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.23", features = ["derive"] }
color-eyre = "0.6.3"
diesel = { version = "2.0", features = ["postgres", "chrono", "r2d2"] }
eyre = "0.6.12"
nanuak-schema = { path = "nanuak-schema" }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = "2.5.4"
r2d2 = "0.8.10"
reqwest = { version = "0.12.9", features = ["json"] }
itertools = "0.13.0"
futures = "0.3.31"
ollama-rs = "0.2.1"
pgvector = { version = "0.4.0", features = ["diesel"] }
diesel_full_text_search = "2.2.0"
simsimd = "6.2.1"
sha2 = "0.10.8"
ignore = "0.4.23"
indexmap = "2.7.0"

# Optimized for bundle size. If you want faster builds comment out/delete this section.
[profile.release]
lto = true        # Enable Link Time Optimization
opt-level = "z"   # Optimize for size.
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
panic = "abort"   # Abort on panic
strip = true      # Automatically strip symbols from the binary.
debug = false
