[workspace]
resolver = "2"
members = [
    "nanuak-schema",
    "nanuak-youtube-populate-details",
    "nanuak-youtube-takeout-ingest",
    "nanuak-youtube-populate-details",
    "nanuak-youtube-embeddings",
    "nanuak-files-index-request",
    "nanuak-prompting",
    "nanuak-files-ui",
    "nanuak-git",
    "nanuak-memes",
    "nanuak-vtt",
    "nanuak-qwen",
    "nanuak-cargo-home",
    "nanuak-config",
    "nanuak-1password",
    "nanuak-picking",
    "nanuak-ai-router",
]

[workspace.dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.23", features = ["derive"] }
color-eyre = "0.6.3"
diesel = { version = "2.0", features = ["postgres", "chrono", "r2d2"] }
eyre = "0.6.12"
nanuak-schema = { path = "nanuak-schema" }
nanuak-1password = { path = "nanuak-1password" }
nanuak-config = { path = "nanuak-config" }
nanuak-ai-router = { path = "nanuak-ai-router" }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
urlencoding = "2.1.3"
tokio = { version = "1.42.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = "2.5.4"
r2d2 = "0.8.10"
reqwest = { version = "0.12.9", features = ["json"] }
itertools = "0.13.0"
futures = "0.3.31"
ollama-rs = "0.2.1"
pgvector = { version = "0.4.0", features = ["diesel"] }
diesel_full_text_search = "2.2.0"
simsimd = "6.2.1"
sha2 = "0.10.8"
ignore = "0.4.23"
indexmap = "2.7.0"
axum = "0.6"
hyper = "0.14"
tower = "0.4"
tower-http = { version = "0.4", features = ["fs"] }
uuid = "1.4"
mime = "0.3"
cloud_terrastodon_core_user_input = { git = "https://github.com/aafc-cloud/Cloud-Terrastodon/", rev = "5ea41e5fa70a8f0e83119bec846c28d49859be6a" }
# vtt = "1.0.0"
# vtt = { path = "D:\\Repos\\rust\\vtt"}
vtt = { git = "https://github.com/TeamDman/vtt", rev = "2fdea35ee297cf2b84db8dd156e34180bc8a4527" }
strum = { version = "0.27.0", features = ["derive"] }


# Optimized for bundle size. If you want faster builds comment out/delete this section.
[profile.release]
lto = true        # Enable Link Time Optimization
opt-level = "z"   # Optimize for size.
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
panic = "abort"   # Abort on panic
strip = true      # Automatically strip symbols from the binary.
debug = false
