[package]
name = "nanuak-1password"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre.workspace = true
eyre.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
cloud_terrastodon_core_user_input = { workspace = true }
itertools.workspace = true
