[package]
name = "nanuak-cargo-home"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre.workspace = true
eyre.workspace = true
futures.workspace = true
itertools.workspace = true
tokio.workspace = true
tokio-stream = "0.1.17"
tower = { workspace = true, features = ["futures-util", "tokio", "tokio-stream", "util"] }
cloud_terrastodon_core_user_input.workspace = true