[package]
name = "nanuak-config"
version = "0.1.0"
edition = "2024"

[dependencies]
nanuak-1password.workspace = true
color-eyre.workspace = true
dashmap = { version = "6.1.0", features = ["serde"] }
directories = "6.0.0"
dotenvy = "0.15.7"
eyre.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }
toml = "0.8.20"
async-trait = "0.1.86"
cloud_terrastodon_core_user_input = { workspace = true }
strum.workspace = true
itertools.workspace = true

[dev-dependencies]
open = "5.3.2"
