[package]
name = "nanuak-files-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
hyper = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
diesel = { workspace = true }
r2d2 = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
mime = { workspace = true }
once_cell = "1.17.1"
thiserror = "1.0"
# For convenience or logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# If you want a local environment
dotenvy = "0.15"
nanuak-schema = { workspace = true }
