[package]
name = "nanuak-files-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
hyper = { workspace = true }
reqwest = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
diesel = { workspace = true }
r2d2 = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
mime = { workspace = true }
# For convenience or logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# If you want a local environment
nanuak-schema = { workspace = true }
urlencoding = { workspace = true }
nanuak-config = { workspace = true }
eyre.workspace = true
color-eyre.workspace = true
