[package]
name = "nanuak-git"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { workspace = true }
color-eyre = { workspace = true }
eyre = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
ignore = { workspace = true }
nanuak-schema = { workspace = true }
diesel = { workspace = true }
r2d2 = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
chrono = { workspace = true }
cloud_terrastodon_core_user_input = { workspace = true }