[package]
name = "nanuak-memes"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
diesel = { version = "2.0", features = ["postgres", "r2d2", "chrono"] }
r2d2 = "0.8"
walkdir = "2.3"
base64 = "0.21"
clap = { version = "4", features = ["derive"] }
open = "3.2"
