[package]
name = "nanuak-prompting"
version = "0.1.0"
edition = "2021"

[dependencies]
ignore = { workspace = true }
eyre = { workspace = true }
itertools = { workspace = true }
indexmap = { workspace = true }
color-eyre = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }