[package]
name = "nanuak-youtube-history-search"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { workspace = true }
color-eyre = { workspace = true }
eyre = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
diesel = { workspace = true }
tokio = { workspace = true }
nanuak-schema = { workspace = true }
nanuak-config = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
r2d2 = { workspace = true }
ratatui = { rev = "fe8577c0704495c0a98705bc1b036b1a60123f02", git = "https://github.com/ratatui-org/ratatui" }
humantime = "2.1.0"
